[package]
name = "mqtt-client-demo1"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.25.0"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql","sqlite"] }
sqlx_migrator = { version = "0.18.0", features=["sqlite"] }
rusqlite = "=0.32.1"
env_logger = "0.11.8"
log = "0.4"
log4rs = { version = "1.4.0", features = ["console_appender", "rolling_file_appender", "size_trigger", "time_trigger", "pattern_encoder", "gzip"] }
mysql = "26.0.1"

[dev-dependencies]
env_logger = "0.11"
